<resources>
    <string name="app_name">kambio</string>

    <string name="accept">Accept</string>
    <string name="add_issuer">Add issuer</string>
    <string name="adding_issuer_to_trusted_list">Adding issuer to trusted list</string>
    <string name="cannot_use_option_at_this_time">Cannot use option at this time</string>
    <string name="cannot_change_trusted_by_contacts">Cannot change trusted by contacts.</string>
    <string name="cancel">Cancel</string>
    <string name="cashapp">Cashapp</string>
    <string name="cash_addr_of_this_device">Cash address of this device</string>
    <string name="cash_addr_to_connect_to">Cash address to connect to</string>
    <string name="cash_image_width">Cash image width</string>
    <string name="cash_image_heigth">Cash image heigth</string>
    <string name="cash_text_size">Cash text size</string>
    <string name="cashnotes_to_send">Cashnotes to send</string>
    <string name="change_currency">Change currency</string>
    <string name="choose_net_addr">Choose net address</string>
    <string name="cod">COD</string>
    <string name="config">Config</string>
    <string name="connect_to">Connect to</string>
    <string name="contacts_image_heigth">Contacts image heigth</string>
    <string name="contacts_image_width">Contacts image width</string>
    <string name="contacts_text_size">Contacts text size</string>
    <string name="create_drop_box">Create drop box</string>
    <string name="creating_contact">Creating contact</string>
    <string name="creating_user">Creating user</string>
    <string name="creating_user_please_wait">Creating user please wait</string>
    <string name="current_path_not_set">current_path_not_set</string>
    <string name="current_user">Current user</string>
    <string name="debug_delete_all">DEBUG_DELETE_ALL</string>
    <string name="debug_create_test_channels">DEBUG create test channels</string>
    <string name="debug_create_test_prominotes">DEBUG create test prominotes</string>
    <string name="delete_all_files_question">Delete all files?</string>
    <string name="delete_all_issuers">Delete all issuers</string>
    <string name="delete_all_issuers_question">Delete all issuers?</string>
    <string name="delete_selected_issuer">Delete selected issuer</string>
    <string name="do_not_trust_this_issuer">Do not trust this issuer</string>
    <string name="dropbox">Dropbox</string>
    <string name="email">email</string>
    <string name="finding_cashnotes">Finding accepted cash notes</string>
    <string name="first_key">First key</string>
    <string name="give_cash">Give cash</string>
    <string name="go_up">go_up</string>
    <string name="help_sum_zero">Sum is zero. Add some first.</string>
    <string name="highlight_not_trusted_by_contacts">Highlight not trusted by contacts</string>
    <string name="id_coutry_code">Id coutry code</string>
    <string name="id_number">Id number</string>
    <string name="issuers">Issuers</string>
    <string name="issuers_filter">Issuers filter</string>
    <string name="issuers_none_found_add_one">No issuers found. Add one.</string>
    <string name="issuers_not_trusted">Not trusted</string>
    <string name="issuers_not_trusted_by_contacts">Not trusted by contacts</string>
    <string name="issuers_trusted">Trusted issuers</string>
    <string name="issuers_trusted_by_contacts">Trusted by contacts</string>
    <string name="issuer_already_in_list">Issuer already in list.</string>
    <string name="issuer_already_in_that_position">Issuer already in that position.</string>
    <string name="issuer_none_selected">No issuer selected. Select one.</string>
    <string name="issuer_not_trusted_by_contacts_add_anyway">Issuer not trusted by contacts. Add issuer anyway?</string>
    <string name="is_not_a_valid_position">Is not a valid position</string>
    <string name="key_too_short">Key is too short</string>
    <string name="loading_contacts">Loading contacts</string>
    <string name="look_at_chosen_item">Look at chosen item</string>
    <string name="me">Me</string>
    <string name="name">Name</string>
    <string name="navigate_files">Navigate files</string>
    <string name="network_not_found">Network not found</string>
    <string name="network_not_started">Network not started</string>
    <string name="net_address_text_size">Net address text size</string>
    <string name="new_contact">New contact</string>
    <string name="no_selected_contact">There is no contact selected. Select one.</string>
    <string name="no_such_user">There is no such user</string>
    <string name="ok">OK</string>
    <string name="only_chosen">Only chosen</string>
    <string name="operation_failed">Operation failed</string>
    <string name="operation_timeout">Operation timeout</string>
    <string name="password_accepted_creating_account">Password accepted. Creating account.</string>
    <string name="password_verification_failed">Password verification failed. Try again.</string>
    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="phone_number">Phone number</string>
    <string name="pick_country">Pick country</string>
    <string name="pick_currency">Pick currency</string>
    <string name="pick_ip">Pick network address</string>
    <string name="pick_photo">Pick photo</string>
    <string name="please_wait">Please wait</string>
    <string name="previous_net_addresses">Previous net addresses</string>
    <string name="receive_cash">Receive cash</string>
    <string name="settings">Settings</string>
    <string name="set_password_base_file">Set password base file</string>
    <string name="set_trusted_issuer_position">Set trusted issuer position</string>
    <string name="show_not_trusted_issuers">Show not trusted issuers</string>
    <string name="show_not_trusted_by_contacts_issuers">Show not trusted by contacts issuers</string>
    <string name="show_trusted_by_contacts_issuers">Show trusted by contacts issuers</string>
    <string name="show_trusted_issuers">Show trusted issuers</string>
    <string name="stopping_file_or_network_error">Stopping. File or network error found.</string>
    <string name="symmetric_encryption_bootstrap">Symmetric encryption bootstrap</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="toggle_more_less">Toggle more/less</string>
    <string name="trust_this_issuer">Trust this issuer</string>
    <string name="type_your_password">Type your password</string>
    <string name="updating_issuers">Updating all issuers</string>
    <string name="user_image_is_obligatory">An image is obligatory. Choose or make one.</string>
    <string name="user_photo">User photo</string>
    <string name="user_profile">User profile</string>
    <string name="verify_your_password">Verify your password twice (fill both fields).</string>
    <string name="wait_for_receiving_party_to_connect">Wait for receiving party to connect</string>
    <string name="you_have_no_accounts_type_a_new_password">You have no accounts. Type a new password.</string>
    <string name="you_have_no_contacts_add_one">You have no contacts. Add one.</string>
    <string name="you_have_no_cash_get_some">You have no cash. Get some.</string>

    <string-array name="help_only_chosen">
        <item>Sum is zero. Add some first.</item>
    </string-array>
        <string name="see_contact_info">See contact info</string>
        <string name="delete_contact">Delete contact</string>
        
</resources>
