<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/issuers_menu_item"
        android:icon="@drawable/issuers_gold_drw"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/issuers">
    </item>
    <item
        android:id="@+id/current_currency_menu_item"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/cod">
    </item>
    <item
        android:id="@+id/change_issuers_menu_item"
        android:icon="@drawable/issuers_white_drw"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/issuers">
    </item>
    <item
        android:id="@+id/change_currency_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/change_currency">
    </item>
    <item
        android:id="@+id/see_contact_info_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/see_contact_info">
    </item>
    <item
        android:id="@+id/user_profile_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/user_profile">
    </item>
    <item
        android:id="@+id/delete_contact_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_contact">
    </item>
    <item
        android:id="@+id/config_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/config">
    </item>
    <item
        android:id="@+id/nav_files_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/navigate_files">
    </item>
    <item
        android:id="@+id/create_dbg_channels_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/debug_create_test_channels">
    </item>
    <item
        android:id="@+id/create_dbg_passets_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/debug_create_test_prominotes">
    </item>
    
</menu>