<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/show_trusted_menu_item"
        android:icon="@drawable/look_trusted_green_on_drw"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/show_trusted_issuers">
    </item>
    <item
        android:id="@+id/show_not_trusted_menu_item"
        android:icon="@drawable/look_trusted_red_off_drw"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/show_not_trusted_issuers">
    </item>

    <group
        android:checkableBehavior="single"
        android:orderInCategory="100" >
        <item
            android:id="@+id/show_trusted_ck_menu_item"
            android:title="@string/show_trusted_issuers"/>
        <item
            android:id="@+id/show_not_trusted_ck_menu_item"
            android:title="@string/show_not_trusted_issuers"/>
        <item
            android:id="@+id/show_trusted_by_contacts_ck_menu_item"
            android:title="@string/show_trusted_by_contacts_issuers"/>
        <item
            android:id="@+id/show_not_trusted_by_contacts_ck_menu_item"
            android:title="@string/show_not_trusted_by_contacts_issuers"/>
    </group>
    <group
        android:checkableBehavior="all"
        android:orderInCategory="100" >
        <item
            android:id="@+id/highlight_not_trusted_by_contacts_menu_item"
            android:title="@string/highlight_not_trusted_by_contacts"/>
    </group>

    <item
        android:id="@+id/delete_selected_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_selected_issuer">
    </item>
    <item
        android:id="@+id/delete_all_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/delete_all_issuers">
    </item>
    <item
        android:id="@+id/config_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/config">
    </item>
    <item
        android:id="@+id/nav_files_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/navigate_files">
    </item>

</menu>


