<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/cancel_menu_item"
        android:icon="@drawable/cancel_white_drw"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/cancel">
    </item>
    <item
        android:id="@+id/filter_chosen_menu_item"
        android:icon="@drawable/look_dis_drw"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/only_chosen">
    </item>
    <item
        android:id="@+id/wait_connection_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/wait_for_receiving_party_to_connect">
    </item>
    <item
        android:id="@+id/change_currency_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/change_currency">
    </item>
    <item
        android:id="@+id/config_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/config">
    </item>
    <item
        android:id="@+id/nav_files_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/navigate_files">
    </item>

</menu>

