<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_dropbox_menu_item"
        android:icon="@drawable/create_dropbox_off_drw"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/create_drop_box">
    </item>

    <group
        android:checkableBehavior="all"
        android:orderInCategory="100" >
        <item
            android:id="@+id/add_drop_box_ck_menu_item"
            android:title="@string/create_drop_box"/>
        <item
            android:id="@+id/with_key_ck_menu_item"
            android:title="@string/symmetric_encryption_bootstrap"/>
    </group>

    <item
        android:id="@+id/config_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/config">
    </item>
    <item
        android:id="@+id/nav_files_menu_item"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/navigate_files">
    </item>

</menu>

