<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/net_address_text_sz_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_address_text_size" >
        </TextView>

        <EditText
            android:id="@+id/net_address_text_sz_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/contacts_text_sz_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts_text_size" >
        </TextView>

        <EditText
            android:id="@+id/contacts_text_sz_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/contacts_image_height_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts_image_heigth" >
        </TextView>

        <EditText
            android:id="@+id/contacts_image_height_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/contacts_image_width_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts_image_width" >
        </TextView>

        <EditText
            android:id="@+id/contacts_image_width_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/cash_text_sz_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_text_size" >
        </TextView>

        <EditText
            android:id="@+id/cash_text_sz_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/cash_image_height_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_image_heigth" >
        </TextView>

        <EditText
            android:id="@+id/cash_image_height_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/cash_image_width_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_image_width" >
        </TextView>

        <EditText
            android:id="@+id/cash_image_width_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <ImageView
            android:id="@+id/accept_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:clickable="true"
            android:contentDescription="@string/accept"
            android:onClick="clicked_accept_button"
            android:src="@drawable/accept_black_drw"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

</ScrollView>

