<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="6"
            android:clickable="true"
            android:contentDescription="@string/user_photo"
            android:gravity="left"
            android:onClick="clicked_user_photo"
            android:src="@drawable/person_drw"
            tools:ignore="InefficientWeight" />

        <TextView
            android:id="@+id/user_id_title"
            style="@style/info_title_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_number" >
        </TextView>

        <TextView
            android:id="@+id/user_id_value"
            style="@style/info_value_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="" >
        </TextView>

        <TextView
            android:id="@+id/user_country_code_title"
            style="@style/info_title_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_coutry_code" >
        </TextView>

        <TextView
            android:id="@+id/user_country_code_value"
            style="@style/info_value_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="" >
        </TextView>

        <TextView
            android:id="@+id/user_name_title"
            style="@style/info_title_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" >
        </TextView>

        <TextView
            android:id="@+id/user_name_value"
            style="@style/info_value_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="" >
        </TextView>

        <TextView
            android:id="@+id/user_phone_nmumber_title"
            style="@style/info_title_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" >
        </TextView>

        <TextView
            android:id="@+id/user_phone_number_value"
            style="@style/info_value_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="" >
        </TextView>

        <TextView
            android:id="@+id/user_email_title"
            style="@style/info_title_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" >
        </TextView>

        <TextView
            android:id="@+id/user_email_value"
            style="@style/info_value_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="" >
        </TextView>
    </LinearLayout>

</ScrollView>