<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cash_address_of_this_device_title"
        style="@style/info_title_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cash_addr_of_this_device" >
    </TextView>

    <TextView
        android:id="@+id/cash_address_of_this_device_value"
        style="@style/info_value_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" >
    </TextView>

    <TextView
        android:id="@+id/cash_address_to_connect_to_title"
        style="@style/info_title_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cash_addr_to_connect_to" >
    </TextView>

    <EditText
        android:id="@+id/cash_address_to_connect_to_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/add_contact_first_key_title"
        style="@style/info_title_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_key" >
    </TextView>

    <EditText
        android:id="@+id/add_contact_first_key_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <ImageView
        android:id="@+id/accept_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:contentDescription="@string/accept"
        android:onClick="clicked_accept_button"
        android:src="@drawable/accept_black_drw"
        tools:ignore="InefficientWeight" />

</LinearLayout>