<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/image_menu_item_style"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:background="@android:drawable/btn_default"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/current_user_button"
            style="@style/image_menu_item_style"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/current_user"
            android:onClick="clicked_current_user_button"
            android:src="@drawable/contact_drw"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/id_recv_cash_button"
            style="@style/image_menu_item_style"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@android:drawable/btn_default"
            android:clickable="true"
            android:contentDescription="@string/receive_cash"
            android:onClick="clicked_people_receive_cash_button"
            android:src="@drawable/receive_money_drw"
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/id_give_cash_button"
            style="@style/image_menu_item_style"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@android:drawable/btn_default"
            android:clickable="true"
            android:contentDescription="@string/give_cash"
            android:onClick="clicked_people_give_cash_button"
            android:src="@drawable/give_money_drw" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="21" >

        <ListView
            android:id="@+id/contacts_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false"
            android:fadeScrollbars="false"
            android:fastScrollEnabled="true" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/you_have_no_contacts_add_one"
            android:textSize="20sp" >
        </TextView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/infor_bar"
            style="@style/info_title_item_style"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="3"
            android:text="@string/cashapp"
            tools:ignore="NestedWeights" >
        </TextView>

        <EditText
            android:id="@+id/contact_filter_value"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:gravity="center_vertical|left"
            android:inputType="text"
            android:text=""
            tools:ignore="NestedWeights" />

        <ImageView
            android:id="@+id/accept_button"
            style="@style/image_menu_item_style"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:clickable="true"
            android:contentDescription="@string/accept"
            android:onClick="clicked_accept_button"
            android:src="@drawable/search_drw" />
    </LinearLayout>

</LinearLayout>